--- a/styles/body_header.scss
+++ b/styles/body_header.scss
@@ -87,4 +87,23 @@
     }
   }
 }
+@media screen and (max-width: 700px) {
 
+  .body-header {
+    min-height: calc(100vh - 70px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+      margin-top: -80px;
+    }
+
+    &-img {
+      order: -1;
+      justify-content: flex-end;
+      margin-top: -50px;
+    } 
+  }
+}
