--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -87,6 +87,7 @@ nav.navbar ul li a:hover:before {
     justify-content: center;
     top: 0px;
     right: 0px;
+    margin-right: 1%;
     z-index: 1;
     background-color: #f5b553;
     width: 50px;
