--- a/styles/body_header.scss
+++ b/styles/body_header.scss
@@ -1,3 +1,9 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 .body-header {
   padding-top: 30px;
   display: flex;
@@ -14,7 +20,7 @@
       transform: rotate(-10deg);
       margin-left: -15px;  
       font-family: 'Qwigley';
-      font-size: 100px;
+      font-size: 120px;
       font-weight: 500;
     }
 
@@ -31,6 +37,7 @@
 
     :nth-child(3){
       text-align: left;
+      font-size: 18px;
     }
 
     button {
@@ -83,27 +90,41 @@
     
     img {
       border-radius: 50%;
-      width: 60%;
+      width: 80%;
+      height: auto;
     }
   }
 }
 @media screen and (max-width: 700px) {
 
   .body-header {
-    min-height: calc(100vh - 70px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
-    h1 {
-      margin-top: -80px;
+    &-title {
+
+      h1 {
+        margin-top: -80px;
+        font-size: 100px;
+      }
+
+      p {
+        font-size: 16px;
+        padding-right: 20%;
+      }
     }
 
     &-img {
       order: -1;
       justify-content: flex-end;
-      margin-top: -50px;
+      
+      img {
+        width: 40%;
+        height: auto;
+        margin-top: -40px;
+      }
     } 
   }
 }
