--- a/styles/body_header.css
+++ b/styles/body_header.css
@@ -97,6 +97,7 @@
 .body-header-img img {
   border-radius: 50%;
   width: 80%;
+  min-width: 300px;
   height: auto;
 }
 
@@ -106,6 +107,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  .body-header-title {
+    margin-top: -25%;
+    margin-right: 20%;
   }
   .body-header-title h1 {
     margin-top: -80px;
@@ -120,7 +125,7 @@
     justify-content: flex-end;
   }
   .body-header-img img {
-    width: 40%;
+    width: 50%;
     height: auto;
     margin-top: -40px;
   }
