--- a/styles/body_header.scss
+++ b/styles/body_header.scss
@@ -105,7 +105,6 @@
     align-items: center;
 
     &-title {
-
       margin-top: -25%;
       margin-right: 20%;
 
@@ -126,6 +125,7 @@
       
       img {
         width: 50%;
+        min-width: 30px;
         height: auto;
         margin-top: -40px;
       }
