--- a/styles/about_me.css
+++ b/styles/about_me.css
@@ -7,16 +7,20 @@
 
 .about-me-img {
   flex: 1;
+  display: flex;
+  justify-content: center;
 }
 
 .about-me-img img {
   border-radius: 50%;
   width: 60%;
+  height: auto;
+  min-width: 300px;
 }
 
 .about-me-description {
   flex: 1;
-  padding-right: 250px;
+  padding: 0% 5%;
 }
 
 .about-me-description h2 {
@@ -45,4 +49,23 @@
 .about-me-description button a {
   text-decoration: none;
   color: white;
+}
+
+@media screen and (max-width: 700px) {
+  .about-me {
+    flex-direction: column;
+  }
+  .about-me-img {
+    order: -1;
+    justify-content: flex-end;
+    margin-top: -20%;
+  }
+  .about-me-img img {
+    min-width: 150px;
+    width: 40%;
+    height: auto;
+  }
+  .about-me-description {
+    padding: 0% 10%;
+  }
 }
