--- a/styles/about_me.scss
+++ b/styles/about_me.scss
@@ -6,16 +6,21 @@
 
   &-img{
     flex: 1;
+    display: flex;
+    justify-content: center;
 
     img {
       border-radius: 50%;
       width: 60%;
+      height: auto;
+      min-width: 300px;
     }
   }
   
   &-description {
     flex: 1;
-    padding-right: 250px;
+    padding: 0% 5%;
+
 
     h2 {
       text-align: start;
@@ -44,5 +49,27 @@
         color: white;
       }
     }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .about-me {
+    flex-direction: column;
+
+    &-img {
+      order: -1;
+      justify-content: flex-end;
+      margin-top: -20%;  
+
+      img {
+        min-width: 150px;
+        width: 40%;    
+        height: auto;
+      }
+    }
+
+    &-description {
+      padding: 0% 10%;
+   }
   }
 }
