--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,7 +2,6 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  padding: 20px 100px;
   background-color: #668895;
   display: flex;
   flex-direction: row;
@@ -21,7 +20,29 @@
   font-size: 20px;
 }
 
+.footer-path {
+  width: 22%;
+  height: auto;
+  font-size: 0.8em;
+  color: white;
+}
+
+.footer-path a {
+  text-decoration: none;
+  color: white;
+}
+
 .footer .social-icons {
   background-color: white;
   color: #668895;
+}
+
+@media screen and (max-width: 700px) {
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer-path {
+    min-width: 60%;
+  }
 }
