--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -2,7 +2,6 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  padding: 20px 100px;
   background-color: #668895;
   display: flex;
   flex-direction: row;
@@ -19,9 +18,34 @@
     color: white;
     font-size: 20px;
   }
+
+  &-path {
+    width: 22%;
+    height: auto;
+    font-size: 0.8em;
+    color: white;
+
+    a {
+      text-decoration: none;
+      color: white;
+    }
+  }
   
   .social-icons {
     background-color: white;
     color: #668895;
   }
+}
+
+@media screen and (max-width: 700px) {
+
+    .footer {
+      display: flex;
+      flex-wrap: wrap;
+
+      &-path {
+        min-width: 60%;
+      }
+    }
+
 }
