--- a/styles/form.css
+++ b/styles/form.css
@@ -45,3 +45,21 @@ p {
   border: 1px solid #ffc53d;
   color: black;
 }
+
+@media screen and (max-width: 600px) {
+  .form {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .form-wrapper {
+    margin: 0% 10%;
+  }
+  .form-wrapper input, .form-wrapper textarea {
+    width: 80%;
+    margin: 5px 0%;
+  }
+  .form-wrapper textarea {
+    margin-top: 15px;
+  }
+}
