--- a/styles/heading_curriculum.scss
+++ b/styles/heading_curriculum.scss
@@ -7,25 +7,29 @@
 
   &-photo {
     flex: 1;
+    margin-left: 1%;
     
     img {
       border-radius: 50%;
-      width: 60%;
+      width: 70%;
+      max-width: 350px;
+      height: auto;
+      min-width: 300px;
     }
   }
 
   &-description {
-    flex: 1;
+    flex: 2;
     display: flex;
     align-items: center;
+    justify-content: center;
 
     > ul {
       list-style: none;
-      width: 60%;
-      overflow: auto;
+      width: 70%;
 
       > li {
-        padding: 10px 0px;
+        padding: 20px 0px;
         border-top: 2px solid rgba(102, 136, 149,0.4);
 
         a {
@@ -51,7 +55,7 @@
 
       > li {
         list-style: none;
-        padding: 5px 0px;
+        padding: 10px 0px;
       }
     }
     
@@ -59,5 +63,21 @@
       max-height: 15em;
     }
 
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .heading-curriculum {
+
+    &-photo {
+      display: none;
+    }
+
+    &-description {
+      
+      #list {
+
+      }
+    }
   }
 }
