--- a/styles/about_me.scss
+++ b/styles/about_me.scss
@@ -1,3 +1,5 @@
+@import '/scss/variables';
+
 .about-me {
   display: flex;  
   flex-flow: row;
@@ -34,8 +36,8 @@
 
     button {
       padding: 15px 30px;
-      color: #ffffff;
-      background-color: #f5b553;
+      color: $button-text;
+      background-color: $primary-orange;
       text-align: center;
       border-radius: 25% 0%;
       border: none;
@@ -46,7 +48,7 @@
       
       a {
         text-decoration: none;
-        color: white;
+        color: $button-text;
       }
     }
   }
